--- a/app/css/index.css
+++ b/app/css/index.css
@@ -241,17 +241,16 @@ li{
     color: white;
     display: flex;
     justify-content: space-between;
-
     background-image: url('../../public/imgs/Background.png');
 }
 .content-left{
     display: flex;
     flex-direction: column;
-    gap: 35px;
-    padding: 50px;
+    gap: 25px;
+    padding: 0px 0px 50px 100px;
     justify-content: end;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
 }
 .content-right{
     display: flex;
@@ -265,9 +264,14 @@ li{
 .content-block-left{
     display: flex;
     flex-direction: column;
-    gap:50px;
+    gap:20px;
+}
+.content-block-box:nth-last-child(1){
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
 }
 .content-block-box{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.175);
+    padding-bottom: 30px;
     display: flex;
     gap: 20px;
 }
@@ -276,3 +280,24 @@ li{
     flex-direction: column;
     gap: 10px;
 }
+.p-item{
+    font-size: 12px;
+    padding: 10px 20px ;
+    background-color: #E8594E;
+    border-radius: 20px;
+    width: fit-content;
+}
+.content-p-text{
+    font-size: 1.8rem;
+}
+.p-button{
+    padding: 20px 60px;
+    font-size: 12px;
+    background-color: #73AFBA;
+    border-radius: 10px;
+    width: fit-content;
+}
+.p-block-item{
+    color: #ffffff77;
+}
+
