--- a/app/css/index.css
+++ b/app/css/index.css
@@ -322,7 +322,8 @@ li{
     background-image: url("../../public/imgs/Mask Group.jpg");
 }
 .contact-container{
-    position: relative;
+    display: flex;
+    justify-content: space-between;
     height: 100%;
     padding: 0px 100px;
 }
@@ -330,13 +331,15 @@ li{
     padding: 80px;
 }
 .contact-text-left{
+    height: 100%;
     bottom: 180px;
-    position: absolute;
     color: white;
     display: flex;
     flex-direction: column;
     gap: 30px;
     width: 100%;
+    justify-content: end;
+    padding-bottom: 180px;
     max-width: 450px;
 }
 .contact-text-left h2{
@@ -344,4 +347,42 @@ li{
 }
 .contact-text-left p{
     color: #ffffffb9;
+}
+.input-container{
+    width: 100%;
+    max-width: 350px;
+    display: flex;
+    height: 100%;
+    align-items: end;
+}
+.input-box{
+    gap: 20px;
+    width: 100%;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    height: fit-content;
+    padding: 40px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+.input-box input{
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #1c2e3d69;
+}
+.input-p{
+    border-bottom-left-radius:7px ;
+    border-bottom-right-radius:7px ;
+    color: white;
+    width: 100%;
+    background-color: #73AFBA;
+    text-align: center;
+    padding: 20px;
+}
+.input-block{
+    margin-bottom: -59px;
+    width: 100%;
 }
