--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -385,4 +386,25 @@ li{
 .input-block{
     margin-bottom: -59px;
     width: 100%;
+}
+
+
+/* ----swiper---- */
+#app { height: 100% }
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
