--- a/app/css/index.css
+++ b/app/css/index.css
@@ -390,7 +390,33 @@ li{
 
 
 /* ----swiper---- */
+.swiper-top-text h2{
+    font-size: 3rem;
+}
+.swiper-top-text p{
+    color: rgba(0, 0, 0, 0.473);
+}
+.swiper-top-text{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 490px;
+    margin: 0 auto;
+    padding: 70px 0px ;
+    text-align: center;
+}
+
 #app { height: 100% }
+html,
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
 .swiper {
   width: 100%;
   padding-top: 50px;
@@ -400,11 +426,15 @@ li{
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 300px;
-  height: 300px;
+  width: 50% !important;
+  height: 300px ;
 }
-
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+    display: none !important;
+}
 .swiper-slide img {
   display: block;
   width: 100%;
+  height: 450px;
 }
+
